@@ -37,6 +37,7 @@ fixed bugs:
 - fixed a bug correcting the binvarssorted flag in cons_linear.c
 - fixed bug in cons_varbound.c not resolving multi-aggregated variables
 - fixed bug when sorting knapsack constraints with the same weights
+- ensure consistency of LP bounds during OBBT diving, i.e., that lower <= upper holds exactly
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
